Tweaked the README

--- a/README.html
+++ b/README.html
@@ -90,6 +90,10 @@ used as a "tandem verifier" for an actual CPU implementation.</p>
   <p><code>Simulator/exe_hw_d</code></p>
 </blockquote>
 
+<p>The executable was built and tested on Ubuntu 17.04, and also tested
+on Debian 8.9 (jessie). Hopefully it should run on any x86 64-bit
+Linux.</p>
+
 <p>In this executable:</p>
 
 <blockquote>
